# South-Render-Engine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  Setup.sh  SouthRenderEngine.sln  SouthRenderEngine.vcxproj  SouthRenderEngine.vcxproj.filters  pre-commit
Engine/: .clang-format  SouthRenderEngine.vcxproj  SouthRenderEngine.vcxproj.filters  imgui.ini
Engine/Resources/Shaders/: CompileShaders.bat  VulkanTutorial.vert
Engine/Resources/Shaders/Cached/: Base_V.spv
Engine/Shaders/: BlinnPhong.frag  BlinnPhong.vert  BlinnPhongColor.frag  BlinnPhongColor.vert  GrayMesh.frag  GrayMesh.vert  Random.frag  Random.vert  VulkanTutorial.frag  base.vert
Engine/Source/: Main.cpp  sthpch.h
Engine/Source/Application/: App.cpp  App.h  Main.cpp  VulkanExampleApp.cpp  VulkanExampleApp.h
Engine/Source/Core/: Application.cpp  Application.h  Context.cpp  Context.h  GraphicCard.cpp  GraphicCard.h  IndexBuffer.cpp  IndexBuffer.h  Main.cpp  Mesh.cpp  Mesh.h  OpenglContext.cpp  OpenglContext.h  ShadersLibrary.cpp  ShadersLibrary.h  SwapChain.cpp  SwapChain.h  Tutorial.h  VertexBuffer.cpp  VertexBuffer.h  VertexIndexBuffer.cpp  VertexIndexBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h  VulkanVertexIndexBuffer.cpp  VulkanVertexIndexBuffer.h  Window.cpp  Window.h
Engine/Source/Core/App/: Application.cpp  Application.h  GraphicalInterface.cpp  GraphicalInterface.h
Engine/Source/Core/AssetManager/: AssetManager.cpp  AssetManager.h
Engine/Source/Core/Buffers/: Buffer.cpp  Buffer.h  UniformBuffer.cpp  UniformBuffer.h  VertexIndexBuffer.cpp  VertexIndexBuffer.h
Engine/Source/Core/Devices/: GraphicCard.cpp  GraphicCard.h
Engine/Source/Core/Events/: EventsInterface.h
Engine/Source/Core/FileSystem/: FileSystem.cpp  FileSystem.h
Engine/Source/Core/Log/: Logger.cpp  Logger.h
Engine/Source/Core/Logger/: Logger.cpp  Logger.h
Engine/Source/Core/Math/: LinearColor.cpp  LinearColor.h  Vector.h
Engine/Source/Core/Mesh/: Mesh.cpp  Mesh.h
Engine/Source/Core/Renderer/: CommandPool.cpp  CommandPool.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  RendererContext.cpp  RendererContext.h
Engine/Source/Core/ScenePipeline/: ScenePipeline.cpp  ScenePipeline.h
Engine/Source/Core/Shaders/: Shader.cpp  Shader.h  ShadersLibrary.cpp  ShadersLibrary.h  VulkanShader.cpp  VulkanShader.h
Engine/Source/Core/Utils/: VulkanUtils.cpp  VulkanUtils.h
Engine/Source/Core/Window/: SwapChain.cpp  SwapChain.h  VulkanWindow.cpp  VulkanWindow.h  Window.cpp  Window.h
Engine/Source/Editor/: Camera.cpp  Camera.h  Editor.cpp  Editor.h  EditorViewport.cpp  EditorViewport.h  Entity.cpp  Entity.h  Event.cpp  Event.h  Mesh.cpp  Mesh.h  SCamera.cpp  SCamera.h  Scene.cpp  Scene.h
Engine/Source/Example/: VulkanExampleApp.cpp  VulkanExampleApp.h  stb_image.h
Engine/Source/Math/: Vector.cpp  Vector.h  VectorTest.cpp  VectorTest.h
Engine/Source/Scene/: Scene.cpp  Scene.h  SceneDescriptorSet.cpp  SceneDescriptorSet.h  SceneObject.cpp  SceneObject.h  ScenePipeline.cpp  ScenePipeline.h  SceneRenderPass.cpp  SceneRenderPass.h  SceneViewport.cpp  SceneViewport.h
Engine/Source/Shaders/: Triangle.frag  Triangle.vert  base.vert  vert.spv
Engine/Source/Shaders/Compiled/: Base_V.spv  CompileShaders.bat  Triangle_V.spv
ExternalLibraries/GLFW/: GLFW.vcxproj.filters
ExternalLibraries/GLFW/Source/: init.c
ExternalLibraries/ImGui/: .gitignore  ImGui.vcxproj  ImGui.vcxproj.filters
ExternalLibraries/ImGui/Include/: vulkan_example.cpp
ExternalLibraries/Vulkan/Lib/: GenericCodeGen.lib  SPIRV-Tools-link.lib  SPIRV-Tools-lint.lib  SPIRV-Tools-shared.lib  SPVRemapper.lib  dxcompiler.lib  glslang-default-resource-limits.lib  shaderc_combined.lib  spirv-cross-c-shared.lib  spirv-cross-c.lib  spirv-cross-cpp.lib  spirv-cross-hlsl.lib  spirv-cross-reflect.lib  spirv-cross-util.lib
ExternalLibraries/imgui/: imgui.cpp  imgui.h
ExternalLibraries/spdlog/Libs/: spdlog.lib
Source/: GUI.h  Main.cpp  sthpch.h
Source/Core/: Application.cpp  Application.h  Context.h  Main.cpp  OpenglContext.cpp  OpenglContext.h  Tutorial.h  VulkanApplication.cpp  VulkanApplication.h  VulkanContext.cpp  VulkanContext.h  Window.cpp  Window.h
Source/Shaders/: CompileShaders.bat
